# alexandria

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml  security.yml  test.yml
alexandria/: __init__.py  __main__.py  config.py
alexandria/bot/: __init__.py  agent.py  prompt.py  telegram.py
alexandria/cli/: backup_cmd.py  beliefs_cmd.py  bench_cmd.py  bot_cmd.py  capture_cmd.py  daemon_cmd.py  db_cmd.py  diff_cmd.py  doctor_cmd.py  eval_cmd.py  export_cmd.py  hooks_cmd.py  ingest_cmd.py  ingest_repo_cmd.py  init_cmd.py  jobs_cmd.py  lint_cmd.py  logs_cmd.py  main.py  mcp_cmd.py  paste_cmd.py  project_cmd.py  query_cmd.py  reindex_cmd.py  secrets_cmd.py  skill_cmd.py  source_cmd.py  status_cmd.py  subscriptions_cmd.py  sync_cmd.py  synthesize_cmd.py  watch_cmd.py  why_cmd.py  workspace_cmd.py
alexandria/core/: __init__.py  agent_loop.py  backup.py  circuit_breaker.py  code.py  crash_dump.py  export.py  export_github.py  export_graph.py  fts_integrity.py  ingest.py  llm_ingest.py  llm_query.py  pdf.py  query_save.py  reingest.py  repo_ingest.py  runs.py  search.py  self_knowledge.py  source_kind.py  synthesis.py  watcher.py  web.py  wiki_log.py  workspace.py
alexandria/daemon/: __init__.py  heartbeat.py  parent.py  scheduler.py
alexandria/db/: __init__.py  connection.py  migrator.py
alexandria/eval/: __init__.py  metrics.py  runner.py
docs/: GUIDE.md  IMPLEMENTATION_PLAN.md  PLAN_AMENDMENTS.md  cli.md  index.md
docs/guides/: jobs.md  (+3 more)
llmwiki/: __init__.py  __main__.py  config.py
scripts/: build.sh  publish.sh  push.sh  test_e2e.sh
tests/: conftest.py  test_bench.py  test_bot_agent.py  test_bot_cli.py  test_capture_queue.py  test_circuit_breaker.py  test_conversation_capture.py  test_daemon_parent.py  test_e2e_flow.py  test_eval.py  test_events.py  test_export_github.py  test_export_graph.py  test_git_local_adapter.py  test_heartbeat.py  test_hooks_installer.py  test_ingest_merge_behavior.py  test_jobs.py  test_local_adapter.py  test_migrations_phase4.py  test_migrations_phase5.py  test_new_adapters.py  test_openai_provider.py  test_pdf.py  test_ratelimit.py  test_redactor.py  test_rss_adapter.py  test_scheduler.py  test_skill_install.py  test_source_repository.py  test_structured_logger.py  test_subscription_poll.py  test_subscription_repository.py  test_synthesis.py  test_vault.py  test_web_fetch.py  test_worker_reliability.py
(+297 files in other folders)
